--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
 
-  <form name="test" netlify netlify-honeypot="bot-field" hidden>
+  <form name="contact" method="POST" data-netlify="true">
     <input type="text" name="name" />
     <input type="email" name="email" />
     <textarea name="message"></textarea>
